Creating bin dir

--- a/build-aux/org.jetuml.JetUML.yaml
+++ b/build-aux/org.jetuml.JetUML.yaml
@@ -71,6 +71,7 @@ modules:
     builddir: true
     build-commands: []
     post-install:
+      - mkdir -p /app/bin/jetuml
       - cp launch_jetuml /app/bin/
       - chmod +x /app/bin/launch_jetuml
     sources:
